Prevent text select on Firefox and other browsers.

--- a/src/styles/videoPage.styl
+++ b/src/styles/videoPage.styl
@@ -71,6 +71,10 @@
     width: 100%;
     text-align: center;
     word-wrap: break-word;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 }
 
